--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <header>
-        
+        <h1>imagem</h1>
+        <ul>  
+        <li>carrinho</li>
+        <li>pesquisa</li>
+        </ul>
     </header>
 </body>
-</html>
+</html> 
