--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>imagem</h1>
+    <header class="rezes">
+        <img src="Marcelo 1.png" alt="logo da shein">
+        <!--Nome da imagem: rezesImagens-->
         <ul>  
         <li>carrinho</li>
         <li>pesquisa</li>
