--- a/index.html
+++ b/index.html
@@ -16,5 +16,13 @@
         <li>pesquisa</li>
         </ul>
     </header>
+    section class="sobre">
+        <div class="sobreConteudo">
+             <h2 class="sobreTitulo">Sobre nossa loja</h2>
+    <p class="sobreTextoUm">Encontre na nossa loja tudo o que você precisa para seu setup e para o dia a dia.<br> 
+        Oferecemos qualidade e, o mais importante, confiabilidade total, do pagamento à entrega do seu produto em casa.</p>
+        </div>
+   <img src="Marcelo 1.png" alt="Logo TechSphere" class="SobreImagem">
+</section>
 </body>
 </html> 
