--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li>pesquisa</li>
         </ul>
     </header>
-    section class="sobre">
+    <section class="sobre">
         <div class="sobreConteudo">
              <h2 class="sobreTitulo">Sobre nossa loja</h2>
     <p class="sobreTextoUm">Encontre na nossa loja tudo o que você precisa para seu setup e para o dia a dia.<br> 
