--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="rezes">
-        <img src="Marcelo 1.png" alt="logo da shein">
+    <header class="Cabecalho">
+        <img src="Marcelo 1.png" alt="logo da shein" class="Cabecalho">
         <!--Nome da imagem: rezesImagens-->
-        <ul>  
-        <li>carrinho</li>
-        <li>pesquisa</li>
+        <ul class="CabecalhoListaItem">  
+        <li class="CabecalhoListaItem">carrinho</li>
+        <li class="CabecalhoListaItem">pesquisa</li>
         </ul>
     </header>
     <section class="sobre">
