--- a/index.html
+++ b/index.html
@@ -24,5 +24,31 @@
         </div>
    <img src="Marcelo 1.png" alt="Logo TechSphere" class="SobreImagem">
 </section>
+<section class="membros">
+    <h2 class="membrosTitulo">Shein</h2>
+    <div class="membroDiv">
+    <img class="membroImagem" src="Marcelo 1 (15).png" alt="">
+    <h3 class="membroNome">79,00</h3>
+    </div>
+
+    <div class="membroDiv">
+    <img class="membroImagem" src="Marcelo 1 (11).png" alt="">
+    <h3 class="membroNome">70,00</h3>
+    </div>
+
+    <div class="membroDiv">
+    <img class="membroImagem" src="Marcelo 1 (13).png" alt="">
+    <h3 class="membroNome">59,22</h3>
+    </div>
+
+    <div class="membroDiv">
+    <img class="membroImagem" src="Marcelo 2.png" alt="">
+    <h3 class="membroNome">69,00</h3>
+    </div>
+
+    
+</section>
+
 </body>
 </html> 
+
